VERSION 2.04
-----------------
All Three Parts
Overall balancing for EET mega-mod installations
Successful regression testing of previous beta versions

Tea With Landrin added
Sandrah/Szass in Neera ToB quest added
New shopkeeper in Nashkel
Feldepost is a high class inn

updated fl#add_kit_ee.tpa 

VERSION 2.03b
-----------------

All Three Parts
Area graphics updated for PVRZ
Journal Upgrade for weidu 2.40 and better
Adjustments if higher difficulty levels are chosen by player
General reduction of XP gain from mod

SoD NPC banter files ressurected
More robust check for crossmod candidates
Missing resources added

Sandrah HP bug fixed
Sandrah cannot use some items
Tenya recognises bowl
Pai'na NPC survives Viconia/Sandrah quest

Added Afaaq Crossmod
Added Tenya NPC Crossmod
Alternative Unseeing Eye Solution
Low quality movie converted to cutscene

VERSION 2.02b
----------------
Bhaalspawn Trilogy

Completely re-created for EET
Adapted to new journal and worldmap capabilities
Optimised use of new game resources
Sandrah's personal items restricted
Items adjusted to EET
Sandrah's spells revised

Added Sandrah Siege of Dragonspear content
New BG1 to BG2 transition
Solve SoD murder case and re-open Baldur's Gate City in BG2

Consistent Drizzt portrait for all Sandrah/Drizzt(s) crossmod
Revised dependecies on other mega mods
Kit implementation refined
Improved Jen'lig

Removed Ajantis Crossmod
Removed RE Crossmod

Added Neera, Dorn, Rasaad, Baeloth, Hexxat Crossmod
Added Sirene NPC Crossmod
Added Foundling Crossmod
Added Karlini rescue case
Neera can get planar sphere if PC not mage
Hexxat can get thieves guild if PC not thief
Dark Horizon Extension adapted

IWD I Sandrah content added
IWD HoW additional quest and content

____________________________________________
Return to Faerun

Transition from ToB to RtF renewed
Restored all NPC bios if game ends at ToB by player choice
Adapted travelling system to new worldmap capabilities 